Revert "fix: revert gantt visibility check"
This reverts commit 63eeab54a84255673548504a0e31f317fb75f027.

--- a/example/src/index.css
+++ b/example/src/index.css
@@ -1,5 +1,6 @@
 .Wrapper {
   margin-bottom: 2rem;
+  width: 1200px;
 }
 .ViewContainer {
   list-style: none;
